Bug 94969 - Sidebar: chart panel's area doesn't reflect status of current pie chart wedge/bar chart data point
Summary: Sidebar: chart panel's area doesn't reflect status of current pie chart wedge...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks: Chart-Sidebar Pie-and-Donut
  Show dependency treegraph
 
Reported: 2015-10-11 23:10 UTC by Luke
Modified: 2024-10-15 21:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
example chart to test bug (26.95 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-10-11 23:10 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2015-10-11 23:10:52 UTC
Created attachment 119526 [details]
example chart to test bug

Steps to reproduce:
1. Create a pie chart in Calc
2. Edit the chart
3. Click on on different wedges 
4. Note color indicated by the sidepanel -> properties -> Area -> Fill Color does NOT change when you select different series.
5. Change the chart type to bar chart
6. Note the color indicated by the data series, changes when you select different series. This is the desired behavior. 
7. Select a single data point on the bar chart. 
8. Note the color indicated by the point does not change when you select different points.


Note the you can change the color, but the color shown in the sidebar does not reflect the wedge/point color. If you use the "Format data series" for pie or "Format data point" dialog box for bar charts to change color, the dialog box shows the correct color unlike the sidebar element.
Comment 1 Yousuf Philips (jay) (retired) 2015-10-12 13:42:20 UTC
Confirmed. In bar chart type, it takes the color of the data series rather than the data point color.

Version: 5.1.0.0.alpha1+
Build ID: 143fb0a4b5d4ab69d4928299d8112ab95d99870a
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-10-11_00:06:41
Locale: en-US (en_US.UTF-8)
Comment 2 Commit Notification 2015-10-12 21:55:15 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2753cd308716f5f14a59242032f2242fe0776ca2

update area panel for data points, tdf#94969

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-10-12 21:55:19 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01cc898aac11b608c3565a9c22970f10e4b63438

update the line panel for data points, related tdf#94969

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.