update area panel for data points, tdf#94969

Change-Id: I700ae8ff591ef1ea82887b1ec2cd7b4be04978db